--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,48 @@
+asttokens==2.2.1
+backcall==0.2.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
 click==8.1.3
+comm==0.1.2
+debugpy==1.6.6
+decorator==5.1.1
+executing==1.2.0
 Flask==2.2.2
 greenlet==2.0.2
+idna==3.4
 importlib-metadata==6.0.0
+ipykernel==6.21.1
+ipython==8.9.0
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
+jupyter-client==8.0.2
+jupyter-core==5.2.0
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+packaging==23.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+prompt-toolkit==3.0.36
+psutil==5.9.4
 psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==1.10.4
-SQLAlchemy==2.0.0
+Pygments==2.14.0
+python-dateutil==2.8.2
+pyzmq==25.0.0
+requests==2.28.2
+six==1.16.0
+SQLAlchemy==1.4.44
+stack-data==0.6.2
+tornado==6.2
+traitlets==5.9.0
 typing-extensions==4.4.0
+urllib3==1.26.14
+wcwidth==0.2.6
 Werkzeug==2.2.2
 zipp==3.12.0
